# git-eval

./: .env.sample  .gitignore  CHANGELOG.md  README.md  pyproject.toml  run.sh
_output/: EmbeddingsExtraction_git_eval.md  ExtractionPipeline-lab_git_eval.md  FrameComparisonModel-lambda_git_eval.md  FramesComparer-lambda_git_eval.md  FramesEmbeddingsExtractor-lambda_git_eval.md  InstagramContentCollector-lambda_git_eval.md  InstagramTests_git_eval.md  InstagramVideoDownloader-lambda_git_eval.md  InstagramVideoDownloaderBulk-lambda_git_eval.md  OrianeCoreAI-mojo_git_eval.md  OrianeCoreAI-python_git_eval.md  OrianeDevOpsCLI-bash_git_eval.md  OrianeExtractionSDK-python_git_eval.md  OrianeInfra-bash_git_eval.md  OrianePipeline-fastapi_git_eval.md  OrianeSearch-fastapi_git_eval.md  OrianeVectorDB-qdrant_git_eval.md  SAM-model_git_eval.md  SSCD-model_git_eval.md  ViT-model_git_eval.md  ViT_SAM-model_git_eval.md  VideoCropper-lambda_git_eval.md  VideoFramesExtractor-lambda_git_eval.md  VideoFramesExtractorBulk-lambda_git_eval.md  VideoFramesSceneExtractor-lambda_git_eval.md  _git_eval_authors_schedule.csv  _git_eval_daily_totals.csv  _git_eval_dashboard.json  _git_eval_dashboard.md  _git_eval_monthly_totals.csv  migration-supabase-to-aws_git_eval.md  opencv-cuda_git_eval.md  orn-acquisition-lambdas_git_eval.md  orn-admin-api_git_eval.md  orn-admin-web_git_eval.md  orn-experience-app_git_eval.md  orn-experience-applications_git_eval.md  orn-platform-applications_git_eval.md  orn-platform-clusters_git_eval.md  orn-processor-applications_git_eval.md  (+3 more)
src/giteval/: __main__.py  (+2 more)
