[tool.poetry]
name = "git-eval"
version = "0.1.0"
description = "Git repository evaluator: metrics, history series, and effort estimates"
authors = ["Oriane Team <devnull@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.0"

[tool.poetry.scripts]
git-eval = "giteval.main:main"
git-eval-multi = "giteval.combine:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

